# AI-job-recommender-system

./: main.py  pyproject.toml  requirements.txt
