[project]
name = "job-recommender-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apify-client>=1.12.0",
    "langchain-groq>=0.3.6",
    "mcp[cli]>=1.12.0",
    "pymupdf>=1.26.3",
    "python-dotenv>=1.1.1",
    "python-env>=1.0.0",
    "streamlit>=1.47.0",
]
